load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:tools/bazel.bzl", "rules")
load(":build.bzl", "define_targets")

define_targets(rules = rules)

# os alvos de bool_flag permitem a configuração da build a
# partir da linha de comando, ex: --//c10:use_gflags ou
# --no//c10:use_gflags para desabilitar

bool_flag(
    name = "use_gflags",
    build_setting_default = True
)

bool_flag(
    name = "use_glog",
    build_setting_default = True
)

config_setting(
    name = "using_gflags",
    flag_values = {":use_gflags": "true"}
)

config_setting(
    name = "using_glog",
    flag_values = {":use_glog": "true"}
)